<resources>
    <string name="app_name">Calculator</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="input">Input Number Here</string>
    <string name="overflow">溢位</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="ac"></string>
</resources>